Довёрстана страница index.html мобильной версии

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,3 +10,8 @@
 @import "blocks/reason";
 @import "blocks/advantages";
 @import "blocks/reasons";
+@import "blocks/feedback";
+@import "blocks/map";
+@import "blocks/page-footer";
+@import "blocks/socials";
+@import "blocks/developed";
