Доработана страница index.html мобильной версии Элементы оформлены в соответствии со стайлгайдом, изменены некоторые теги

--- a/src/sass/blocks/developed.scss
+++ b/src/sass/blocks/developed.scss
@@ -16,5 +16,13 @@
     height: 34px;
     font-size: 0;
     background-image: url(../img/icon-htmlacademy.png);
+
+    &:hover {
+      background-image: url(../img/icon-htmlacademy-hover.png);
+    }
+
+    &:active {
+      background-image: url(../img/icon-htmlacademy-active.png);
+    }
   }
 }
