--- a/src/sass/blocks/socials.scss
+++ b/src/sass/blocks/socials.scss
@@ -15,19 +15,38 @@
     background-color: #81b3d2;
     font-size: 0;
 
-    &--twitter {
+    &::after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+
+    &--twitter::after {
       background-image: url(../img/icon-twitter.png);
       background-repeat: no-repeat;
     }
 
-    &--facebook {
+    &--facebook::after {
       background-image: url(../img/icon-facebook.png);
       background-repeat: no-repeat;
     }
 
-    &--youtube {
+    &--youtube::after {
       background-image: url(../img/icon-youtube.png);
       background-repeat: no-repeat;
+    }
+
+    &:hover {
+      background-color: #669ec0;
+    }
+
+    &:active {
+      background-color: #5496bd;
+    }
+
+    &:active::after {
+      opacity: 0.3;
     }
   }
 }
