--- a/src/sass/blocks/intro.scss
+++ b/src/sass/blocks/intro.scss
@@ -1,22 +1,23 @@
 .intro {
   position: relative;
   z-index: 5;
-  padding-bottom: 18px;
+  padding-bottom: 5px;
 
   &__image-wrapper {
     position: relative;
-
-    &::before {
-      @include skew-left(9deg);
-    }
-
-    &::after {
-      @include skew-right(9deg);
-    }
+    padding: 91px 19px 83px;
+    background-image: url(../img/bg-intro-triangle-mobile.svg),
+                      url(../img/bg-back-mobile@1x.jpg);
+    background-repeat: no-repeat;
+    background-position: bottom center,
+                          top center;
+    background-size: 110% auto, auto;
   }
 
   &__image {
     display: block;
+    margin: 0 auto;
+    width: 100%;
   }
 
   &__text {
@@ -41,13 +42,5 @@
     font-size: 14px;
     color: #333333;
     font-weight: normal;
-  }
-
-  &::before {
-    @include skew-left(5deg);
-  }
-
-  &::after {
-    @include skew-right(5deg);
   }
 }
