--- a/src/sass/blocks/main-container.scss
+++ b/src/sass/blocks/main-container.scss
@@ -1,4 +1,12 @@
 .main-container {
   margin: 0 auto;
   width: 320px;
+  /*min-width: 320px;
+  max-width: 600px;*/
+
+/*  @media ($tablet-widths) {
+    width: 768px;
+    min-width: 768px;
+    max-width: 1000px;
+  }*/
 }
