--- a/src/sass/blocks/main-menu.scss
+++ b/src/sass/blocks/main-menu.scss
@@ -1,28 +1,30 @@
 .main-menu {
   background-color: #81b3d2;
 
+
   &__items {
     @include list-style;
+    display: flex;
+    flex-direction: column;
   }
 
   &__item {
+    position: relative;
     border-top: 1px solid #9ac2db;
     border-bottom: 1px solid #678fa8;
 
+    &--logo {
+      position: relative;
+      order: 1;
+      z-index: 10;
+      height: 56px;
+      border: none;
+      text-align: center;
+      background-color: #fff;
+    }
+
     &:first-child {
       border-top: none;
-      position: relative;
-
-      &::after {
-        content: "";
-        position: absolute;
-        top: 17px;
-        right: 20px;
-        width: 23px;
-        height: 22px;
-        background-image: url(../img/icon-cross.png);
-        cursor: pointer;
-      }
     }
 
     &:last-child {
@@ -61,22 +63,86 @@
     }
   }
 
-  &__top {
-    position: relative;
-    z-index: 10;
-    height: 56px;
-    text-align: center;
+
+  &__close {
+    display: block;
+    position: absolute;
+    top: 17px;
+    right: 20px;
+    width: 23px;
+    height: 22px;
+    background-image: url(../img/icon-cross.png);
+    font-size: 0;
+  }
+
+  &__open {
+    display: block;
+    position: absolute;
+    top: 18px;
+    right: 20px;
+    width: 23px;
+    height: 21px;
+    background-image: url(../img/icon-menu.png);
+    font-size: 0;
+  }
+
+/*  @media ($tablet-widths) {
     background-color: #fff;
 
-    &::after {
-      content: "";
-      position: absolute;
-      top: 18px;
-      right: 20px;
-      width: 23px;
-      height: 21px;
-      background-image: url(../img/icon-menu.png);
-      cursor: pointer;
+    &__items {
+      display: flex;
+      flex-direction: row;
     }
-  }
+
+    &__item {
+      border: none;
+      flex-basis: 20%;
+      flex-grow: 1;
+
+      &--logo {
+        order: 0;
+      }
+
+      &:last-child {
+        box-shadow: none;
+      }
+    }
+
+
+    &__link {
+      font-size: 14px;
+      color: #000;
+
+      &:hover {
+        background-color: inherit;
+        color: #81b3d2;
+      }
+
+      &:active {
+        color: #000;
+        opacity: 0.3;
+      }
+
+      &--active {
+        color: #766357;
+
+        &:hover {
+          color: #604e43;
+        }
+
+        &:active {
+          color: #766357;
+          opacity: 0.3;
+        }
+      }
+    }
+
+
+
+
+    &__close,
+    &__open {
+      display: none;
+    }
+  }*/
 }
