--- a/src/sass/blocks/reason.scss
+++ b/src/sass/blocks/reason.scss
@@ -1,9 +1,5 @@
 .reason {
 
-  &:first-child .reason__text--main {
-    padding-top: 64px;
-  }
-
   &__text {
     padding: 38px 30px 40px;
     font-family: $font-stack;
@@ -15,10 +11,16 @@
       color: #fff;
     }
 
+    &--triangle {
+      padding-top: 77px;
+      background-image: url(../img/bg-triangle.svg);
+      background-repeat: no-repeat;
+      background-size: 100% auto;
+    }
+
     &--other {
       padding: 27px 35px 28px;
       box-shadow: 0 -21px 0 -20px #d6d6d6;
-      //background-color: #eeeeee;
       color: #333333;
     }
   }
@@ -49,5 +51,6 @@
 
   &__image {
     display: block;
+    width: 100%;
   }
 }
