--- a/src/sass/blocks/main-container.scss
+++ b/src/sass/blocks/main-container.scss
@@ -1,8 +1,8 @@
 .main-container {
   margin: 0 auto;
-  width: 320px;
-  /*min-width: 320px;
-  max-width: 600px;*/
+  //width: 320px;
+  min-width: 320px;
+  max-width: 600px;
 
 /*  @media ($tablet-widths) {
     width: 768px;
