--- a/src/sass/blocks/reason.scss
+++ b/src/sass/blocks/reason.scss
@@ -15,7 +15,8 @@
       padding-top: 77px;
       background-image: url(../img/bg-triangle.svg);
       background-repeat: no-repeat;
-      background-size: 100% auto;
+      background-size: 110% auto;
+      background-position: top center;
     }
 
     &--other {
