--- a/src/sass/blocks/intro.scss
+++ b/src/sass/blocks/intro.scss
@@ -44,4 +44,27 @@
     color: #333333;
     font-weight: normal;
   }
+
+  @media ($tablet-widths) {
+
+    &__image-wrapper {
+      padding: 77px 154px 91px;
+      background-image: url(../img/bg-intro-triangle-tablet.svg),
+      url(../img/bg-back-tablet@1x.jpg);
+      background-size: 100% auto, auto;
+    }
+
+    &__image {
+      max-height: 350px;
+    }
+
+    &__text {
+      padding: 50px 75px 46px;
+    }
+
+    &__description {
+      font-size: 21px;
+    }
+
+  }
 }
