--- a/src/sass/blocks/main-container.scss
+++ b/src/sass/blocks/main-container.scss
@@ -3,10 +3,17 @@
   //width: 320px;
   min-width: 320px;
   max-width: 600px;
+  box-shadow: 0 0 10px 2px #aaa;
 
   @media ($tablet-widths) {
     width: 768px;
     min-width: 768px;
     max-width: 1000px;
+  }
+
+  @media ($desktop-widths) {
+    width: 1200px;
+    min-width: 1200px;
+    max-width: 1200px;
   }
 }
