--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,7 @@
 @import "variables";
 @import "mixins";
 
+@import "blocks/main-bg";
 @import "blocks/main-container";
 @import "blocks/main-menu";
 @import "blocks/intro";
