--- a/src/sass/blocks/page-footer.scss
+++ b/src/sass/blocks/page-footer.scss
@@ -3,6 +3,7 @@
   font-family: $font-stack;
   text-transform: uppercase;
   text-align: center;
+  background-color: #fff;
 
   &__hashtag {
     margin-bottom: 36px;
