--- a/src/sass/blocks/reason.scss
+++ b/src/sass/blocks/reason.scss
@@ -64,7 +64,6 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-
       padding: 45px 47px 50px;
       flex-shrink: 1;
 
@@ -79,6 +78,13 @@
 
     &__image-container {
       flex-shrink: 0;
+      height: 255px;
+      overflow: hidden;
+    }
+
+    &__image {
+      position: relative;
+      top: -71px;
     }
 
     &__header {
@@ -87,6 +93,12 @@
 
     &--reverse {
       flex-direction: row-reverse;
+    }
+  }
+
+  @media ($desktop-widths) {
+    &__text {
+      padding: 45px 119px 50px;
     }
   }
 }
