--- a/src/sass/blocks/main-container.scss
+++ b/src/sass/blocks/main-container.scss
@@ -4,6 +4,7 @@
   min-width: 320px;
   max-width: 600px;
   box-shadow: 0 0 10px 2px #aaa;
+  background-color: #fff;
 
   @media ($tablet-widths) {
     width: 768px;
