--- a/src/sass/blocks/intro.scss
+++ b/src/sass/blocks/intro.scss
@@ -87,14 +87,22 @@
 
   @media ($desktop-widths) {
     &__image-wrapper {
-      padding: 77px 154px 91px;
+      padding: 102px 370px 119px;
       background-image: url(../img/bg-intro-triangle-desktop.svg),
-      url(../img/bg-back-desktop@1x.jpg);
+    url(../img/bg-back-desktop@1x.jpg);
       background-size: 100% auto, auto;
+
+      &--index {
+        padding: 77px 154px 91px;
+      }
     }
 
     &__text {
-      padding: 50px 300px 46px;
+      padding: 111px 355px 33px;
+
+      &--index {
+        padding: 50px 300px 46px;
+      }
     }
   }
 }
