Свёрстана мобильная версия страницы photo.html

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,3 +18,7 @@
 @import "blocks/developed";
 
 @import "blocks/main-form";
+
+@import "blocks/photos";
+@import "blocks/photo";
+@import "blocks/video";
