--- a/src/sass/blocks/photo.scss
+++ b/src/sass/blocks/photo.scss
@@ -8,10 +8,6 @@
     margin-bottom: 16px;
   }
 
-  &__info {
-
-  }
-
   &__description {
     margin-bottom: 6px;
     line-height: 24px;
@@ -43,5 +39,25 @@
     line-height: 24px;
     font-size: 14px;
     font-weight: bold;
+  }
+
+  @media ($tablet-widths) {
+    padding: 0;
+    box-shadow: none;
+
+    &__image {
+      margin-bottom: 0;
+    }
+
+    &__info {
+      display: flex;
+      padding: 16px 20px 10px;
+      justify-content: space-between;
+      background-color: #f2f2f2;
+
+      &--dark-bg {
+        background-color: #eaeaea;
+      }
+    }
   }
 }
