Свёрстана десктопная версия страницы photo.html

--- a/src/sass/blocks/photo.scss
+++ b/src/sass/blocks/photo.scss
@@ -33,6 +33,11 @@
   &__like-this {
     display: block;
     margin-right: 14px;
+    width: 23px;
+    height: 21px;
+    background-image: url(../img/icon-like-gray.svg);
+    background-repeat: no-repeat;
+    font-size: 0;
   }
 
   &__like-count {
@@ -58,6 +63,28 @@
       &--dark-bg {
         background-color: #eaeaea;
       }
+    }
+  }
+
+  @media ($desktop-widths) {
+    position: relative;
+
+    &__info {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0,0,0,0.3);
+      color: #fff;
+    }
+
+    &__autor {
+      color: #fff;
+    }
+
+    &__like-this {
+      background-image: url(../img/icon-like-white.svg);
+
     }
   }
 }
